# postcodes

./: README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
postcodes/: __init__.py  uk.py
scripts/: postcodes
tests/: test_postcodes_uk.py
