[metadata]
name = postcodes
version = 0.1.0
url = https://github.com/samukasmk/postcodes
author = Samuel Sampaio
author_email = samukasmk@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
license = Apache 2.0
description = Library to parse postal code format.
long_description = file: README.md
long_description_content_type = text/markdown
scripts =
    scripts/postcodes

[options]
python_requires = >=3.6
